Project insurance_ai_erd {
  database_type: "MongoDB"
  Note: '''
  Presentation ERD for insurance-ai backend.
  Based on Mongoose schemas in apps/insu-api/src/schemas.
  Includes a placeholder properties table because notifications.propertyId exists in schema,
  but the Property model is not present in this repository.
  '''
}

Enum MemberType {
  USER
  AGENT
  ADMIN
}

Enum MemberStatus {
  ACTIVE
  BLOCK
  DELETE
}

Enum MemberAuthType {
  PHONE
  EMAIL
  TELEGRAM
}

Enum BoardArticleCategory {
  NOTICE
  FREE
  NEWS
  REVIEW
}

Enum BoardArticleStatus {
  ACTIVE
  INACTIVE
  DELETED
}

Enum ClaimStatus {
  PENDING
  APPROVED
  REJECTED
  SETTLED
}

Enum CommentGroup {
  MEMBER
  ARTICLE
  NOTICE
  PACKAGE
}

Enum CommentStatus {
  ACTIVE
  INACTIVE
  DELETED
}

Enum FaqCategory {
  POLICY
  CLAIMS
  PAYMENT
  AGENTS
  ACCOUNT
  COMMUNITY
  OTHER
}

Enum FaqStatus {
  ACTIVE
  INACTIVE
  DELETED
}

Enum LikeGroup {
  MEMBER
  PACKAGE
  ARTICLE
}

Enum NoticeCategory {
  EVENT
  UPDATE
  PROMOTION
  SYSTEM
}

Enum NoticeStatus {
  ACTIVE
  INACTIVE
  ARCHIVED
}

Enum NotificationGroup {
  SYSTEM
  ARTICLE
  SOCIAL
}

Enum NotificationStatus {
  WAIT
  SENT
  FAILED
  READ
}

Enum NotificationType {
  INFO
  WARNING
  ERROR
  SUCCESS
}

Enum InsuranceType {
  TERM_LIFE
  WHOLE_LIFE
  PET
  CRITICAL_ILLNESS
  DISABILITY
  TRAVEL
  CYBER_LIABILITY
  PROFESSIONAL_INDEMNITY
  LEGAL_EXPENSE
  ACCIDENT
  HEALTH
  AUTO
  HOME
}

Enum PackageStatus {
  ACTIVE
  INACTIVE
  ARCHIVED
}

Enum PolicyStatus {
  ACTIVE
  INACTIVE
  CANCELLED
  EXPIRED
  PENDING
}

Enum ViewGroup {
  MEMBER
  AGENT
  PACKAGE
  ARTICLE
  NOTICE
}

Table members [headercolor: #f39c12] {
  _id objectId [pk]
  memberType MemberType [not null, default: 'USER']
  memberStatus MemberStatus [not null, default: 'ACTIVE']
  memberAuthType MemberAuthType [not null, default: 'PHONE']
  memberPhone string [not null, unique]
  memberNick string [not null, unique]
  memberPassword string [not null]
  memberFullName string
  memberImage string
  memberAddress string
  memberDesc string
  memberProperties int [not null, default: 0]
  memberArticles int [not null, default: 0]
  memberFollowers int [not null, default: 0]
  memberFollowings int [not null, default: 0]
  memberPoints int [not null, default: 0]
  memberLikes int [not null, default: 0]
  memberViews int [not null, default: 0]
  memberComments int [not null, default: 0]
  memberRank int [not null, default: 0]
  memberWarnings int [not null, default: 0]
  memberBlocks int [not null, default: 0]
  deletedAt date
  createdAt date [not null]
  updatedAt date [not null]
}

Table packages [headercolor: #f39c12] {
  _id objectId [pk]
  packageType InsuranceType [not null]
  packageStatus PackageStatus [not null, default: 'ACTIVE']
  packageName string [not null]
  packageDesc string
  packagePrice double [not null]
  packageCoverageLimit double
  packageMinAge int
  packageMaxAge int
  packageAssetTags string[]
  packageImages string[]
  packageViews int [not null, default: 0]
  packageLikes int [not null, default: 0]
  packageComments int [not null, default: 0]
  packageRank int [not null, default: 0]
  memberId objectId
  createdAt date [not null]
  updatedAt date [not null]
}

Table policies [headercolor: #f39c12] {
  _id objectId [pk]
  policyStatus PolicyStatus [not null, default: 'ACTIVE']
  memberId objectId [not null]
  packageId objectId [not null]
  AgentId string [not null, note: 'Stored as String in backend']
  memberNick string [not null]
  packageName string [not null]
  premiumAmount double [not null]
  startDate date [not null]
  endDate date [not null]
  cancelledAt date
  createdAt date [not null]
  updatedAt date [not null]
}

Table claims [headercolor: #f39c12] {
  _id objectId [pk]
  claimStatus ClaimStatus [not null, default: 'PENDING']
  memberId objectId [not null]
  policyId objectId [not null]
  agentId string [not null, note: 'Stored as String in backend']
  claimTitle string [not null]
  claimDesc string
  claimAmount double [not null]
  claimDocuments string[]
  aiAnalysis string
  agentNote string
  createdAt date [not null]
  updatedAt date [not null]
}

Table properties [headercolor: #f39c12, note: 'Placeholder table for notifications.propertyId. Property schema is not present in this repo.'] {
  _id objectId [pk]
}

Table follows [headercolor: #1da1f2] {
  _id objectId [pk]
  followingId objectId [not null]
  followerId objectId [not null]
  createdAt date [not null]
  updatedAt date [not null]

  indexes {
    (followingId, followerId) [unique]
  }
}

Table likes [headercolor: #1da1f2, note: 'Polymorphic target via likeRefId + likeGroup'] {
  _id objectId [pk]
  likeGroup LikeGroup [not null]
  likeRefId objectId [not null]
  memberId objectId [not null]
  createdAt date [not null]
  updatedAt date [not null]

  indexes {
    (memberId, likeRefId, likeGroup) [unique]
  }
}

Table views [headercolor: #1da1f2, note: 'Polymorphic target via viewRefId + viewGroup'] {
  _id objectId [pk]
  viewGroup ViewGroup [not null]
  viewRefId objectId [not null]
  memberId objectId [not null]
  createdAt date [not null]
  updatedAt date [not null]

  indexes {
    (memberId, viewRefId, viewGroup) [unique]
  }
}

Table comments [headercolor: #1da1f2, note: 'Polymorphic target via commentRefId + commentGroup'] {
  _id objectId [pk]
  commentStatus CommentStatus [not null, default: 'ACTIVE']
  commentGroup CommentGroup [not null]
  commentContent string [not null]
  commentRefId objectId [not null]
  memberId objectId [not null]
  createdAt date [not null]
  updatedAt date [not null]
}

Table notices [headercolor: #1da1f2] {
  _id objectId [pk]
  noticeCategory NoticeCategory [not null]
  noticeStatus NoticeStatus [not null, default: 'ACTIVE']
  noticeTitle string [not null]
  noticeContent string [not null]
  memberId objectId [not null]
  createdAt date [not null]
  updatedAt date [not null]
}

Table boardArticles [headercolor: #f39c12] {
  _id objectId [pk]
  articleCategory BoardArticleCategory [not null]
  articleStatus BoardArticleStatus [not null, default: 'ACTIVE']
  articleTitle string [not null]
  articleContent string [not null]
  articleImage string
  articleLikes int [not null, default: 0]
  articleViews int [not null, default: 0]
  articleComments int [not null, default: 0]
  memberId objectId [not null]
  createdAt date [not null]
  updatedAt date [not null]
}

Table notifications [headercolor: #1da1f2] {
  _id objectId [pk]
  notificationType NotificationType [not null]
  notificationStatus NotificationStatus [not null, default: 'WAIT']
  notificationGroup NotificationGroup [not null]
  notificationTitle string [not null]
  notificationDesc string
  authorId objectId [not null]
  receiverId objectId [not null]
  propertyId objectId
  articleId objectId
  createdAt date [not null]
  updatedAt date [not null]
}

Table faqs [headercolor: #1da1f2] {
  _id objectId [pk]
  faqCategory FaqCategory [not null]
  faqStatus FaqStatus [not null, default: 'ACTIVE']
  faqQuestion string [not null]
  faqAnswer string [not null]
  faqOrder int [not null, default: 0]
  memberId objectId [not null]
  createdAt date [not null]
  updatedAt date [not null]
}

TableGroup "Core" {
  members
  packages
  policies
  claims
  properties
}

TableGroup "Social" {
  follows
  likes
  views
  comments
}

TableGroup "Content" {
  notices
  boardArticles
  faqs
  notifications
}

Ref: follows.followingId > members._id
Ref: follows.followerId > members._id

Ref: packages.memberId > members._id

Ref: policies.memberId > members._id
Ref: policies.packageId > packages._id

Ref: claims.memberId > members._id
Ref: claims.policyId > policies._id

Ref: boardArticles.memberId > members._id

Ref: comments.memberId > members._id

Ref: notices.memberId > members._id

Ref: faqs.memberId > members._id

Ref: likes.memberId > members._id

Ref: views.memberId > members._id

Ref: notifications.authorId > members._id
Ref: notifications.receiverId > members._id
Ref: notifications.articleId > boardArticles._id
Ref: notifications.propertyId > properties._id
